# rust-book

./: Cargo.toml  Rocket.toml  diesel.toml  readme.md
docker/: Dockerfile-postgres-test  build-docker-images.sh  docker-compose.yml
migrations/2020-07-20-003858_create_companies/: down.sql  up.sql
migrations/2020-07-20-003858_create_companies_and_users/: down.sql  up.sql
migrations/2020-08-23-075606_create_follow_ups_and_check_points/: down.sql  up.sql
migrations/2020-08-23-081303_add_col_employees/: down.sql  up.sql
src/: handler.rs  infrastructure.rs  lib.rs  main.rs  models.rs  schema.rs  usecase.rs
src/domain/: company.rs  employee.rs
src/domain/company/: dao.rs  interactor.rs
src/domain/company/dao/: company_dao_port.rs  dao_port.rs
src/domain/company/interactor/: company_interactor.rs
src/domain/company/model/: company.rs
src/domain/company/port/: ports.rs
src/domain/employee/: dao.rs  employee.rs  interactor.rs
src/domain/employee/dao/: dao_port.rs
src/domain/employee/interactor/: employee_interactor.rs
src/infrastructure/: persistence.rs  storage.rs  web_api.rs  webapi.rs
src/infrastructure/persistence/: entity_models.rs
src/infrastructure/persistence/company/: dao.rs
src/infrastructure/persistence/employee/: dao.rs
src/infrastructure/storage/: entity_models.rs  models.rs  schema.rs
src/infrastructure/storage/company/: dao.rs
src/infrastructure/storage/employee/: dao.rs
src/infrastructure/web_api/: company_handler.rs  context.rs  dtos.rs  employee_handler.rs  handler.rs  web_server.rs
src/infrastructure/webapi/: dtos.rs  handler.rs
src/usecase/: dao.rs  interactor.rs  presenter.rs
src/usecase/dao/: company_dao_port.rs  employee_dao_port.rs
src/usecase/interactor/: company_interactor.rs  employee_interactor.rs
src/usecase/presenter/: company_presenter.rs  employee_presenter.rs
